<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/foot1"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/twenty"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/thirtysp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="@dimen/twentysp" />
        />

        <EditText
            android:id="@+id/id_user"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty"
            android:layout_marginTop="@dimen/ten"
            android:hint="@string/enter_user_name"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/fifteensp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="@dimen/twentysp" />
        />

        <EditText
            android:id="@+id/id_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty"
            android:layout_marginTop="@dimen/ten"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/twentysp" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/twenty"
            android:background="@color/white"
            android:text="@string/login"
            android:textColor="@color/black"


            />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/twenty"
            android:background="@color/white"
            android:text="@string/register"
            android:textColor="@color/black"

            />

        <LinearLayout
            android:id="@+id/id_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>
    </LinearLayout>
</ScrollView>